# FHEBackend

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  config.docker.yaml  config.json  config.yaml  docker-compose.dev.yml  execute.sh  flake.nix  main.cc
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
controllers/: demo_v1_OpenFHE.cc  demo_v1_OpenFHE.h
test/: CMakeLists.txt
utils/: fhe_compute.cc  fhe_compute.h  redis_interface.cc  redis_interface.h
